--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="add">Add</string>
     <string name="add_item">Add New Item...</string>
+    <string name="title_activity_edit_item">EditItemActivity</string>
+    <string name="edit_text">Edit Item Below:</string>
+    <string name="edit_save">Save</string>
 </resources>
